Fail on dereferencing error (#1874)
* Fail on dereferencing error

* Fix codacy warnings

* Fix flakiness induced by randomly using things that require setup

* Fix another flaky test based on random types that require more setup

* Respond to QA

* Remove stray imports

* Fix the mocking (#1879)

* Fix the mocking

* Mock cristin org response (#1884)

* Mock org response for top level

* Update model version

* shouldReturnIndexDocumentWithContributorsOrganizations

* shouldReturnIndexDocumentWithTopLevelOrganizationsWithTreeToRelevantAffiliation

* Refactor

* Add 2 contributors to test shouldReturnIndexDocumentWithContributorsOrganizations

* Refactor

* Setup user with top level cristin org (#1885)

* Test funding fetch not successful, log client error (#1888)

* shouldReturnIndexDocumentWithValidExpandedFundingSourceWhenFetchFundingReturnNotFound

* Revert "shouldReturnIndexDocumentWithValidExpandedFundingSourceWhenFetchFundingReturnNotFound"

This reverts commit dc29798779932b52807ee08daf4782093aa7f0ab.

* Refactor fetchFundingSources

* Fix mocking in shouldReturnIndexDocumentWithValidExpandedFundingSourceWhenFetchFundingReturnNotFound

* Code review

* Log client error

* Revert "Log client error"

This reverts commit b8daddf8e739b365a4aba6be1335452bb45a99ef.

* Log client error

* fakeCustomerApiResponse (#1889)

* fakeCustomerApiResponse

* Fix customer api mocking

* Add missing coverage

* Allow a passing build

---------

Co-authored-by: brinxmat <789709+brinxmat@users.noreply.github.com>

* Codacy linting

* Use success family

* Fix style issues

* Codestyle fixes

* Change visibility

* Change visibility

* Change visibility

* Tidy code a bit

* Fix compile error

* Rework faking setup

* Use pinned checkstyle

* Bump gradle

* Follow up QA

---------

Co-authored-by: Mona Ullah <54892125+monaullah@users.noreply.github.com>

* throwing exception when 